Bug 1118981 - initialize mSkipDrawing correctly for already loading fonts. r=jfkthame, a=sylvestre